@@ -1,3 +1,8 @@
+2006-05-05  Riccardo Mottola <riccardo@kaffe.org>
+
+	* libraries/javalib/awt-implementations/kaffe/java/awt/Label.java:
+	removed the painting of a border if label begun and ended with a space
+
 2006-05-04  Riccardo Mottola <riccardo@kaffe.org>
 
 	* libraries/javalib/awt-implementations/kaffe/java/awt/Canvas.java:
